// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when array prop "hotKeys" has one item: "[object Object]" 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when array prop "hotKeys" is an empty array: "[]" 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when array prop "items" has one item: "[object Object]" 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when boolean prop "disabled" is set to: "false" 1`] = `
<styled.div
  data-tip="jest-auto-snapshots String Fixture"
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when boolean prop "fullWidth" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  fullWidth={false}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={false}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when boolean prop "hasCustomAction" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when boolean prop "hasIconOnly" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={false}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when boolean prop "hideSearch" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when boolean prop "isOpen" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={false}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when boolean prop "isSplit" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={false}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when boolean prop "multiSelect" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={false}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when boolean prop "selectPopupVisible" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={false}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when boolean prop "shortcutsEnabled" is set to: "false" 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when passed all props 1`] = `
<styled.div
  data-tip=""
  fullWidth={true}
  innerRef={[Function]}
  isSplit={true}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="jest-auto-snapshots String Fixture"
    />
  </styled.div>
  <styled.div
    fullWidth={true}
    hasIconOnly={true}
    horizontalOffset="jest-auto-snapshots String Fixture"
    isOpen={true}
    marginTop="jest-auto-snapshots String Fixture"
    xPosition="right"
    yPosition="top"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={true}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        keyMap={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        multiSelect={true}
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;

exports[`jest-auto-snapshots > AutoSuggest Matches snapshot when passed only required props 1`] = `
<styled.div
  innerRef={[Function]}
  isSplit={false}
  onClick={[Function]}
  onKeyUp={[Function]}
  role="button"
  tabIndex={0}
>
  <styled.div
    id="searchInput"
    innerRef={[Function]}
  >
    <SearchIcon />
    <Search
      height="small"
      innerRef={[Function]}
      isOpen={true}
      onChange={[Function]}
      onClick={[Function]}
      placeholder="Search"
    />
  </styled.div>
  <styled.div
    hasIconOnly={false}
    isOpen={false}
    xPosition="left"
    yPosition="bottom"
  >
    <styled.ul
      innerRef={[Function]}
    >
      <SelectItem
        getItemId={[Function]}
        hasSelectedItems={false}
        hideSearch={false}
        hovered={false}
        item={
          Object {
            "id": "jest-auto-snapshots String Fixture",
            "title": "jest-auto-snapshots String Fixture",
          }
        }
        onClick={[Function]}
      />
    </styled.ul>
  </styled.div>
</styled.div>
`;
